--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<router-outlet />
+<!-- <router-outlet /> -->
+<app-navbar></app-navbar>
+<div class="min-h-screen">
+  <router-outlet></router-outlet>
+</div>
+<app-footer></app-footer>
